2004-11-11  Ken Kocienda  <kocienda@apple.com>

        Reviewed by John

        Fix for these bugs:

        <rdar://problem/3875618> REGRESSION (Mail): Hitting down arrow with full line selected skips line (br case)
        <rdar://problem/3875641> REGRESSION (Mail): Hitting down arrow with full line selected skips line (div case)

        * khtml/editing/selection.cpp:
        (khtml::Selection::modifyMovingRightForward): Fixed by juggling the position as the starting point for
        the next line position when necessary.
        * layout-tests/editing/selection/move-3875618-fix-expected.txt: Added.
        * layout-tests/editing/selection/move-3875618-fix.html: Added.
        * layout-tests/editing/selection/move-3875641-fix-expected.txt: Added.
        * layout-tests/editing/selection/move-3875641-fix.html: Added.

2004-11-11  Ken Kocienda  <kocienda@apple.com>

        Reviewed by John

        Improved some function names, at John's urging. No changes to the
        functions themselves.
        
        canPerformSpecialCaseAllContentDelete() --> handleSpecialCaseAllContentDelete()
        canPerformSpecialCaseBRDelete() --> handleSpecialCaseBRDelete()
        performGeneralDelete() --> handleGeneralDelete()

        * khtml/editing/htmlediting.cpp:
        (khtml::DeleteSelectionCommand::handleSpecialCaseAllContentDelete)
        (khtml::DeleteSelectionCommand::handleSpecialCaseBRDelete)
        (khtml::DeleteSelectionCommand::handleGeneralDelete)
        (khtml::DeleteSelectionCommand::doApply)
        * khtml/editing/htmlediting.h

2004-11-11  Ken Kocienda  <kocienda@apple.com>

        Reviewed by John
        
        Updated some layout test results that changed as a result of my last checking.
        Added a new test that has been in my tree for a few days.

        * layout-tests/editing/deleting/delete-3775172-fix-expected.txt:
        * layout-tests/editing/deleting/delete-3800834-fix-expected.txt: